Update CSS and SEO

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Chicken McNuggets Font Generator"
+      content="Chicken McNuggets Font Generator | 麥克雞塊體產生器"
     />
+    <meta property="og:title" content="麥克雞塊體產生器 | Chicken McNuggets Font Generator">
+    <meta property="og:description" content="An online tool to convert Chicken McNuggets font text to image" />
+    <meta property="og:image" content="https://github.com/iownthegame/Chicken-McNuggets-Font-Generator/blob/master/demo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Chicken McNuggets Font Generator</title>
+    <link rel="canonical" href="https://iownthegame.github.io/Chicken-McNuggets-Font-Generator">
+    <title>Chicken McNuggets Font Generator | 麥克雞塊體產生器</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
