--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
     />
     <meta property="og:title" content="麥克雞塊體產生器 | Chicken McNuggets Font Generator">
     <meta property="og:description" content="An online tool to convert Chicken McNuggets font text to image" />
-    <meta property="og:image" content="https://github.com/iownthegame/Chicken-McNuggets-Font-Generator/blob/master/demo.png" />
+    <meta property="og:image" content="https://raw.githubusercontent.com/iownthegame/Chicken-McNuggets-Font-Generator/master/demo.png" />
+    <meta property="og:image:width" content="1639" />
+    <meta property="og:image:height" content="1229" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="canonical" href="https://iownthegame.github.io/Chicken-McNuggets-Font-Generator">
     <title>Chicken McNuggets Font Generator | 麥克雞塊體產生器</title>
