--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,8 @@
     <meta property="og:image" content="https://raw.githubusercontent.com/iownthegame/Chicken-McNuggets-Font-Generator/master/demo.png" />
     <meta property="og:image:width" content="1639" />
     <meta property="og:image:height" content="1229" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://iownthegame.github.io/Chicken-McNuggets-Font-Generator/"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="canonical" href="https://iownthegame.github.io/Chicken-McNuggets-Font-Generator">
     <title>Chicken McNuggets Font Generator | 麥克雞塊體產生器</title>
