--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,12 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="canonical" href="https://iownthegame.github.io/Chicken-McNuggets-Font-Generator">
     <title>Chicken McNuggets Font Generator | 麥克雞塊體產生器</title>
+    <style>
+      @font-face {
+        font-family: 'Chicken_McNuggets';
+        src: local('Chicken_McNuggets'), url(%PUBLIC_URL%/fonts/ChickenMcNuggets.ttf) format('truetype');
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
